--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Geospatial Analysis/.DS_Store
 .DS_Store
 
 4. R Shiny/UCDP Violence Dashboard/ucdp-master/.Rhistory
+
+4. R Shiny/UCDP Violence Dashboard/ucdp-master/data/ged201.dta
