--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Geospatial Analysis/.DS_Store
 4. R Shiny/UCDP Violence Dashboard/ucdp-master/.Rhistory
 
 4. R Shiny/UCDP Violence Dashboard/ucdp-master/data/ged201.dta
+
+5. DECDG/graphs/
