--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Geospatial Analysis/.DS_Store
 4. R Shiny/UCDP Violence Dashboard/ucdp-master/data/ged201.dta
 
 5. DECDG/graphs/
+
+5. DECDG/part1_script1.txt
